--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cas Antigua</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href= "./img/LOGO.png" />
 </head>
 <body>
     <header>
-        
+            <div class="nav">
+                <ul>
+                    <li><a href="">Regístrate</a></li>
+                    <li><a href="">Mi cuenta</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li class="icon-siguenos">
+                        <a href="https://www.facebook.com/casantiguadecoraciones">siguenos: </a>
+                        <a class = "icon-f" href="https://www.facebook.com/casantiguadecoraciones"><img class="icon-facebook" src="https://w7.pngwing.com/pngs/94/962/png-transparent-social-media-computer-icons-facebook-inc-icon-design-social-media-thumbnail.png" alt=""></a> 
+                    </li>         
+                    
+                </ul>
+            </div>
     </header>
 
 
