--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Cas Antigua</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href= "./img/LOGO.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,8 +21,17 @@
                         <a href="https://www.facebook.com/casantiguadecoraciones">siguenos: </a>
                         <a class = "icon-f" href="https://www.facebook.com/casantiguadecoraciones"><img class="icon-facebook" src="https://w7.pngwing.com/pngs/94/962/png-transparent-social-media-computer-icons-facebook-inc-icon-design-social-media-thumbnail.png" alt=""></a> 
                     </li>         
-                    
                 </ul>
+            </div>
+            <div class="img-logo">
+                <img src="./img/LOGO.png" alt="">
+                <h1>CASA ANTIGUA</h1>
+                <div class="search-input">
+                    <div class="search">
+                        <input class="input-barra"  type="text" placeholder="Encuentra aquí todo lo que buscas...">
+                    </div>
+                    <a class="icon-search" href=""></a>
+                </div>
             </div>
     </header>
 
